<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="marmot.pig.SetupActivity">

    <!-- Guidelines -->

    <android.support.constraint.Guideline
        android:id="@+id/vertical_guideline1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.25" />

    <android.support.constraint.Guideline
        android:id="@+id/vertical_guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.75" />

    <android.support.constraint.Guideline
        android:id="@+id/horizontal_guideline1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.15" />

    <android.support.constraint.Guideline
        android:id="@+id/horizontal_guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.25" />

    <android.support.constraint.Guideline
        android:id="@+id/horizontal_guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.8" />


    <!-- Widgets -->

    <TextView
        android:id="@+id/player1Label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/player1_text"
        android:textSize="18sp"
        android:maxLines="1"
        app:layout_constraintLeft_toLeftOf="@+id/vertical_guideline1"
        app:layout_constraintRight_toLeftOf="@+id/vertical_guideline1"
        app:layout_constraintTop_toTopOf="@+id/horizontal_guideline1"
        app:layout_constraintBottom_toTopOf="@+id/horizontal_guideline1" />

    <TextView
        android:id="@+id/player2Label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/player2_text"
        android:textSize="18sp"
        android:maxLines="1"
        app:layout_constraintLeft_toLeftOf="@+id/vertical_guideline2"
        app:layout_constraintRight_toLeftOf="@+id/vertical_guideline2"
        app:layout_constraintTop_toTopOf="@+id/horizontal_guideline1"
        app:layout_constraintBottom_toTopOf="@+id/horizontal_guideline1" />

    <EditText
        android:id="@+id/player1Text"
        android:layout_width="128dp"
        android:layout_height="wrap_content"
        android:text="@string/player1_text"
        android:textSize="18sp"
        android:maxLines="1"
        app:layout_constraintLeft_toLeftOf="@+id/vertical_guideline1"
        app:layout_constraintRight_toLeftOf="@+id/vertical_guideline1"
        app:layout_constraintTop_toTopOf="@+id/horizontal_guideline2"
        app:layout_constraintBottom_toTopOf="@+id/horizontal_guideline2" />

    <EditText
        android:id="@+id/player2Text"
        android:layout_width="128dp"
        android:layout_height="wrap_content"
        android:text="@string/player2_text"
        android:textSize="18sp"
        android:maxLines="1"
        app:layout_constraintLeft_toLeftOf="@+id/vertical_guideline2"
        app:layout_constraintRight_toLeftOf="@+id/vertical_guideline2"
        app:layout_constraintTop_toTopOf="@+id/horizontal_guideline2"
        app:layout_constraintBottom_toTopOf="@+id/horizontal_guideline2" />

    <Button
        android:id="@+id/newGameButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/new_game_button"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/horizontal_guideline3"
        app:layout_constraintBottom_toTopOf="@+id/horizontal_guideline3" />

</android.support.constraint.ConstraintLayout>
